@@ -106,7 +106,7 @@ void DoCredits()
         for(int p = 1; p <= maxLocalPlayers; ++p)
         {
             if(useJoystick[p] > 0)
-                quitKey |= JoyIsKeyDown(useJoystick[p] - 1, conJoystick[p].Start);
+                quitKey |= joyIsKeyDown(useJoystick[p] - 1, conJoystick[p].Start);
         }
 #ifdef __ANDROID__ // Quit credits on BACK key press
         quitKey |= (getKeyState(SDL_SCANCODE_AC_BACK) == KEY_PRESSED);
