@@ -6,6 +6,8 @@ Changes for 1.3.4.1
 -Implemented usage of the SDL_GameController with some extras like using of the rumble and the battery status (Render of the status is not implemented yet)
 -Player now can quit the credits screen by pressing the Start button on the gamepad
 -Fixed the glitchy rendering of the first frame at the main menu and at the world map when frame-skip is enabled
+-Every gamepad model will keep it's individual settings per player
+-Added the "Reset to default" menu item to reset controls
 
 Changes for 1.3.4
 -Fixed the inability to use any custom sounds and custom music at level's custom data directory
